<resources>
    <string name="app_name">BulldogVods</string>

    <string name="title_bulldog">BULLDOG</string>
    <string name="title_vods">VODS</string>

    <string name="error_generic_title">Something went wrong</string>
    <string name="error_generic_description">Please try again.</string>
    <string name="error_generic_retry_button">Try again</string>

    <string name="theme_name_dark">Dark</string>
    <string name="theme_name_light">Light</string>
    <string name="theme_name_system_default">System default</string>

    <string name="vod_state_live">Live</string>
    <string name="vod_state_ready">Ready</string>
    <string name="vod_state_processing">Processing</string>

    <string name="chat_position_left">Left</string>
    <string name="chat_position_right">Right</string>
    <string name="chat_position_left_overlay">Left overlay</string>
    <string name="chat_position_right_overlay">Right overlay</string>
    <string name="chat_position_top_left_overlay">Top left overlay</string>
    <string name="chat_position_top_right_overlay">Top right overlay</string>
    <string name="chat_position_bottom_left_overlay">Bottom left overlay</string>
    <string name="chat_position_bottom_right_overlay">Bottom right overlay</string>

    <string name="chat_position_top">Top</string>
    <string name="chat_position_bottom">Bottom</string>

    <string name="chat_text_size_small">Small</string>
    <string name="chat_text_size_normal">Normal</string>
    <string name="chat_text_size_large">Large</string>
    <string name="chat_text_size_huge">Huge</string>

    <string name="navigate_back_content_description">Go back</string>

    <string name="fragment_vods_image_search_content_description">Search</string>
    <string name="fragment_vods_image_settings_content_description">Settings</string>
    <string name="fragment_vods_image_vod_thumbnail_content_description">Vod thumbnail</string>
    <string name="fragment_vods_image_game_thumbnail_content_description">Game thumbnail</string>
    <string name="fragment_vods_chapters">Chapters</string>
    <string name="fragment_vods_recycler_content_description">List of vods</string>

    <string name="fragment_search_vods_hint">Search vods</string>
    <string name="fragment_search_vods_no_results_title">No vods found</string>
    <string name="fragment_search_vods_no_results_description">Try adjusting your search.</string>

    <string name="fragment_vod_chapters_content_description">Choose chapter</string>
    <string name="fragment_vod_button_scroll_to_bottom">More messages below</string>

    <string name="dialog_chapter_chooser_title">Chapter</string>

    <string name="dialog_vod_settings_title">Settings</string>
    <string name="dialog_vod_settings_video_source_title">Quality</string>
    <string name="dialog_vod_settings_chat_position_title">Chat position</string>
    <string name="dialog_vod_settings_chat_text_size_title">Chat text size</string>
    <string name="dialog_vod_settings_chat_width_title">Chat width</string>
    <string name="dialog_vod_settings_chat_width_value_percentage">%1$s%%</string>

    <string name="dialog_video_source_chooser_check_content_description">Selected video source</string>
    <string name="dialog_video_source_chooser_title">Quality</string>

    <string name="dialog_theme_chooser_title">Theme</string>
    <string name="dialog_theme_chooser_check_content_description">Checkmark</string>
    <string name="dialog_theme_chooser_app_version">v%1$s</string>

    <string name="dialog_chat_position_chooser_title">Chat position</string>
    <string name="dialog_chat_position_chooser_check_content_description">Selected chat position</string>

    <string name="dialog_chat_text_size_chooser_title">Chat text size</string>
    <string name="dialog_chat_text_size_chooser_check_content_description">Selected chat text size</string>
</resources>
