<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_title_lirik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bulldog"
        android:textAppearance="?textAppearanceTitleLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/toolbarGuideline"
        app:layout_constraintEnd_toStartOf="@id/text_title_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/title_vods"
        android:textAppearance="?textAppearanceTitleLarge"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/text_title_lirik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_title_lirik" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/toolbarGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarGuideline">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerVods"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="@integer/vods_list_span_count"
            tools:listitem="@layout/list_item_vod" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/layoutError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarGuideline">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_generic_title"
            android:textAppearance="?textAppearanceTitleMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/error_generic_description"
            android:textAppearance="?textAppearanceLabelMedium" />

        <Button
            android:id="@+id/buttonRetry"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/error_generic_retry_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
