<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="@dimen/touch_target_size"
        android:layout_height="@dimen/touch_target_size"
        android:layout_marginStart="@dimen/padding_medium_normal"
        android:layout_marginTop="@dimen/padding_medium_normal"
        android:contentDescription="@string/dialog_chapter_chooser_image_close_content_description"
        android:padding="@dimen/touch_target_icon_padding_large"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_large"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/dialog_chapter_chooser_title"
        android:textAppearance="?textAppearanceTitleSmall"
        app:layout_constraintBottom_toBottomOf="@id/imageClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageClose"
        app:layout_constraintTop_toTopOf="@id/imageClose" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChapterItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageClose"
        tools:listitem="@layout/list_item_chapter" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageClose" />

    <LinearLayout
        android:id="@+id/layoutError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageClose">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_generic_title"
            android:textAppearance="?textAppearanceTitleMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/error_generic_description"
            android:textAppearance="?textAppearanceLabelMedium" />

        <Button
            android:id="@+id/buttonRetry"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/error_generic_retry_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
