<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="@dimen/icon_size_normal"
        android:layout_height="@dimen/icon_size_normal"
        android:layout_marginStart="@dimen/padding_large"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_theme"
        app:layout_constraintBottom_toBottomOf="@id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTitle" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:text="@string/dialog_theme_chooser_title"
        android:textAppearance="?textAppearanceHeadlineSmall"
        app:layout_constraintStart_toEndOf="@id/imageIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutThemeDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_large"
        android:gravity="center_vertical"
        android:minHeight="@dimen/touch_target_size"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <ImageView
            android:id="@+id/imageCheckThemeDark"
            android:layout_width="@dimen/icon_size_normal"
            android:layout_height="@dimen/icon_size_normal"
            android:contentDescription="@string/dialog_theme_chooser_check_content_description"
            android:src="@drawable/ic_check"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/theme_name_dark"
            android:textAppearance="?textAppearanceTitleSmall" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutThemeLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:gravity="center_vertical"
        android:minHeight="@dimen/touch_target_size"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutThemeDark">

        <ImageView
            android:id="@+id/imageCheckThemeLight"
            android:layout_width="@dimen/icon_size_normal"
            android:layout_height="@dimen/icon_size_normal"
            android:contentDescription="@string/dialog_theme_chooser_check_content_description"
            android:src="@drawable/ic_check"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/theme_name_light"
            android:textAppearance="?textAppearanceTitleSmall" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutThemeSystemDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:gravity="center_vertical"
        android:minHeight="@dimen/touch_target_size"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/appVersionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutThemeLight">

        <ImageView
            android:id="@+id/imageCheckThemeSystemDefault"
            android:layout_width="@dimen/icon_size_normal"
            android:layout_height="@dimen/icon_size_normal"
            android:contentDescription="@string/dialog_theme_chooser_check_content_description"
            android:src="@drawable/ic_check"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/theme_name_system_default"
            android:textAppearance="?textAppearanceTitleSmall" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <TextView
        android:id="@+id/appVersionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="v1.1.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
